# hedgefund

./: .env.example  .gitignore  DOC_AUDIT.md  HANDOFF.md  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test-requirements.txt
.claude/: settings.local.json
.github/workflows/: deploy.yml  python-ci.yml  web-ci.yml
agents/: base.py  news_poller.py  research_crypto.py  research_india.py  trading_crypto_sent.py  trading_funding.py  trading_momentum.py  trading_pairs.py  trading_sentiment.py  trading_trend.py
api/: main.py  performance.py
backtest/: clock.py  historical_feeds.py  runner.py
comms/: approval_gate.py  telegram_bot.py  telegram_digest.py
config/: settings.py
dashboard/: app.py
data/: feeds_crypto.py  feeds_india.py  live_crypto_stream.py  onchain.py
deploy/: README.md  deploy.sh  setup.sh
execution/: broker.py  trade_router.py
infra/: signal_bus.py
models/: candle_builder.py  finbert_scorer.py  indicators.py  llm_client.py  pairs.py
record/: research_log.py  track_record.py
risk/: risk_manager.py
tests/: test_api.py  test_approval_and_router.py  test_backtest.py  test_broker.py  test_daily_snapshot.py  test_dry_run.py  test_healthcheck.py  test_indicators.py  test_kill_switch_integration.py  test_live_crypto_stream.py  test_llm_client.py  test_onchain.py  test_pairs_trend_regime.py  test_pdf_report.py  test_performance_api.py  test_realtime_layer.py  test_research_agents.py  test_research_log.py  test_risk_manager.py  test_telegram_digest.py  test_track_record.py  test_trade_router_llm.py  test_trading_funding.py  test_trading_momentum.py  test_trading_sentiment.py  test_weekly_report.py
tools/: backtest.py  daily_snapshot.py  dry_run.py  healthcheck.py  kill_switch_demo.py  telegram_digest.py  weekly_report.py
web/: .gitignore  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
(+25 files in other folders)
