[project]
name = "alphagrid"
version = "0.1.0"
description = "8-agent autonomous trading system (Indian equities + crypto)"
requires-python = ">=3.11"

[tool.pyright]
include = ["agents", "config", "comms", "dashboard", "data", "execution", "models", "record", "risk", "tests", "main.py"]
exclude = ["**/__pycache__", ".venv"]
extraPaths = ["."]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingTypeStubs = "none"
reportMissingImports = "warning"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
