[project]
name = "alphagrid"
version = "0.1.0"
description = "8-agent autonomous trading system (Indian equities + crypto)"
requires-python = ">=3.11"

[tool.pyright]
include = ["agents", "config", "comms", "dashboard", "data", "execution", "models", "record", "risk", "tests", "main.py"]
exclude = ["**/__pycache__", ".venv"]
extraPaths = ["."]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingTypeStubs = "none"
reportMissingImports = "warning"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = ["web", ".venv", "node_modules", ".next"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B"]
ignore = [
    "E501",  # line too long — long strings + URLs are fine
    "E741",  # ambiguous variable name (single-letter math vars are clearer)
    "E731",  # lambda assignment (used in factories)
    "B008",  # function call in default args (FastAPI Depends / Query)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]   # re-exports
"tests/*"     = ["F401", "F841", "B007", "B018", "B905"]  # synthetic loops + literal expressions in fixtures
"tools/*"     = ["F841"]
"agents/*"    = ["F841"]   # intentional `_ignored` locals in branches
